[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/NotoSans/NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Modules/TerminalScript.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Beam2.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 2

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 1 )

[node name="Terminal" type="ColorRect"]
margin_left = 1190.0
margin_right = 1904.0
margin_bottom = 1038.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
color = Color( 0.235294, 0.172549, 0.388235, 0.52549 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -117.659 ],
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.0154062
anchor_top = 0.0125241
anchor_right = 0.987395
anchor_bottom = 0.984586
color = Color( 0.0980392, 0.0941176, 0.152941, 0.819608 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Splitter" type="VSplitContainer" parent="."]
anchor_left = 0.0154062
anchor_top = 0.0125241
anchor_right = 0.987395
anchor_bottom = 0.984586
custom_constants/separation = 0
split_offset = 779
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="History" type="RichTextLabel" parent="Splitter"]
light_mask = 4
material = SubResource( 4 )
margin_right = 694.0
margin_bottom = 976.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
scroll_following = true

[node name="CommandBar" type="HBoxContainer" parent="Splitter"]
margin_top = 976.0
margin_right = 694.0
margin_bottom = 1009.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Location" type="LineEdit" parent="Splitter/CommandBar"]
margin_right = 58.0
margin_bottom = 33.0
focus_mode = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 15
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "/ >"
align = 2
editable = false
expand_to_text_length = true
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "dir_placeholder"
caret_blink = true

[node name="CommandEntry" type="LineEdit" parent="Splitter/CommandBar"]
margin_left = 58.0
margin_right = 694.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "  "
caret_blink = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 78.6931, 500.713 )
scale = Vector2( 0.873877, 0.903995 )
texture = ExtResource( 3 )
offset = Vector2( 320, 0 )
mode = 3
range_item_cull_mask = 4

[connection signal="gui_input" from="Splitter/CommandBar/CommandEntry" to="." method="_on_CommandEntry_gui_input"]
[connection signal="text_entered" from="Splitter/CommandBar/CommandEntry" to="." method="_on_CommandEntry_text_entered"]
